// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib/manager/pipenv/extract extractPackageFile() extracts dependencies 1`] = `
Object {
  "deps": Array [
    Object {
      "currentValue": "==0.3.1",
      "datasource": "pypi",
      "depName": "some-package",
      "depType": "packages",
    },
    Object {
      "currentValue": "==1.0.0",
      "datasource": "pypi",
      "depName": "some-other-package",
      "depType": "packages",
    },
    Object {
      "currentValue": "==1.0.0",
      "depName": "_invalid-package",
      "depType": "packages",
      "skipReason": "invalid-name",
    },
    Object {
      "currentValue": "==0 0",
      "depName": "invalid-version",
      "depType": "packages",
      "skipReason": "invalid-version",
    },
    Object {
      "currentValue": "==1.0.0",
      "datasource": "pypi",
      "depName": "pytest-benchmark",
      "depType": "packages",
      "pipenvNestedVersion": true,
    },
    Object {
      "currentValue": "==0.1.0",
      "datasource": "pypi",
      "depName": "dev-package",
      "depType": "dev-packages",
    },
  ],
  "registryUrls": Array [
    "https://pypi.org/simple",
    "http://example.com/private-pypi/",
  ],
}
`;

exports[`lib/manager/pipenv/extract extractPackageFile() extracts example pipfile 1`] = `
Object {
  "deps": Array [
    Object {
      "depName": "requests",
      "depType": "packages",
      "skipReason": "any-version",
    },
    Object {
      "currentValue": ">0.5.0",
      "datasource": "pypi",
      "depName": "records",
      "depType": "packages",
    },
    Object {
      "depName": "django",
      "depType": "packages",
      "skipReason": "git-dependency",
    },
    Object {
      "depName": "e682b37",
      "depType": "packages",
      "skipReason": "file-dependency",
    },
    Object {
      "depName": "e1839a8",
      "depType": "packages",
      "skipReason": "local-dependency",
    },
    Object {
      "currentValue": "*",
      "depName": "pywinusb",
      "depType": "packages",
      "pipenvNestedVersion": true,
      "registryUrls": Array [
        "https://pypi.python.org/simple",
      ],
      "skipReason": "any-version",
    },
    Object {
      "currentValue": "*",
      "depName": "nose",
      "depType": "dev-packages",
      "skipReason": "any-version",
    },
    Object {
      "currentValue": ">=1.0,<3.0",
      "datasource": "pypi",
      "depName": "unittest2",
      "depType": "dev-packages",
      "pipenvNestedVersion": true,
    },
  ],
  "registryUrls": Array [
    "https://pypi.python.org/simple",
  ],
}
`;

exports[`lib/manager/pipenv/extract extractPackageFile() extracts multiple dependencies 1`] = `
Object {
  "deps": Array [
    Object {
      "currentValue": "==1",
      "datasource": "pypi",
      "depName": "Django",
      "depType": "packages",
    },
    Object {
      "currentValue": "==0.6.27",
      "datasource": "pypi",
      "depName": "distribute",
      "depType": "packages",
    },
    Object {
      "currentValue": "==0.2",
      "datasource": "pypi",
      "depName": "dj-database-url",
      "depType": "packages",
    },
    Object {
      "currentValue": "==2.4.5",
      "datasource": "pypi",
      "depName": "psycopg2",
      "depType": "packages",
    },
    Object {
      "currentValue": "==0.1.2",
      "datasource": "pypi",
      "depName": "wsgiref",
      "depType": "packages",
    },
  ],
  "registryUrls": Array [
    "https://pypi.org/simple",
  ],
}
`;

exports[`lib/manager/pipenv/extract extractPackageFile() supports custom index 1`] = `
Object {
  "deps": Array [
    Object {
      "currentValue": "==0.21.0",
      "datasource": "pypi",
      "depName": "requests",
      "depType": "packages",
      "pipenvNestedVersion": true,
      "registryUrls": Array [
        "https://testpypi.python.org/pypi",
      ],
    },
  ],
  "registryUrls": Array [
    "https://pypi.python.org/simple",
    "https://testpypi.python.org/pypi",
  ],
}
`;
